feat(m3): add project discovery, dependency resolution, and test fixtures
Stage 1 discover_project() scans filesystem, detects languages/frameworks/
build tools, counts LOC. Stage 2 resolve_dependencies() parses Maven, npm,
Python, and .NET build files. Test fixtures for raw-java, express-app, and
spring-petclinic. 87 new tests.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>